@@ -12,6 +12,9 @@ Here is a history of user visible changes to Mailman.
 
   New Features
 
+    - The user options 'list my other subscriptions' page now indicates for
+      each list if the subscription is 'nomail' or 'digest'.  Bug #793669.
+
     - A new list poster password has been implemented.  This password may only
       be used in Approved: or X-Approved: headers for pre-approving posts.
       Using this password for that purpose precludes compromise of a more
